// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FacebookPreview matches the snapshot for a faulty image 1`] = `
<div
  className="FacebookPreview__FacebookPreviewWrapper-sc-1nwbyjh-0 hBCCgB"
  id="facebookPreview"
  mode={null}
>
  <div
    className="FacebookImage__PlaceholderImage-n8g3py-2 cXxLmL"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Select image
  </div>
  <div
    className="FacebookPreview__FacebookTextWrapper-sc-1nwbyjh-1 bjsFkV"
    mode={null}
  >
    <span
      className="screen-reader-text"
    >
      yoast.com
    </span>
    <p
      aria-hidden="true"
      className="FacebookSiteAndAuthorNames__FacebookSiteAndAuthorNamesWrapper-sc-1qo7jpl-0 gAHdzt"
    >
      <span
        className="FacebookSiteAndAuthorNames__FacebookSiteUrl-sc-1qo7jpl-2 hSwXjH"
      >
        yoast.com
      </span>
    </p>
    <span
      className="FacebookTitle-sc-1cm5c6b-0 cITNJw"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      YoastCon Workshops
    </span>
    <p
      className="FacebookDescription-ulm5bh-0 dKqgbc"
      mode={null}
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      Description to go along with a faulty image.
    </p>
  </div>
</div>
`;

exports[`FacebookPreview matches the snapshot for a landscape image 1`] = `
<div
  className="FacebookPreview__FacebookPreviewWrapper-sc-1nwbyjh-0 hBCCgB"
  id="facebookPreview"
  mode={null}
>
  <div
    className="FacebookImage__PlaceholderImage-n8g3py-2 cXxLmL"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Select image
  </div>
  <div
    className="FacebookPreview__FacebookTextWrapper-sc-1nwbyjh-1 bjsFkV"
    mode={null}
  >
    <span
      className="screen-reader-text"
    >
      yoast.com
    </span>
    <p
      aria-hidden="true"
      className="FacebookSiteAndAuthorNames__FacebookSiteAndAuthorNamesWrapper-sc-1qo7jpl-0 gAHdzt"
    >
      <span
        className="FacebookSiteAndAuthorNames__FacebookSiteUrl-sc-1qo7jpl-2 hSwXjH"
      >
        yoast.com
      </span>
    </p>
    <span
      className="FacebookTitle-sc-1cm5c6b-0 cITNJw"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      YoastCon Workshops
    </span>
    <p
      className="FacebookDescription-ulm5bh-0 dKqgbc"
      mode={null}
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      Description to go along with a landscape image.
    </p>
  </div>
</div>
`;

exports[`FacebookPreview matches the snapshot for a portrait image 1`] = `
<div
  className="FacebookPreview__FacebookPreviewWrapper-sc-1nwbyjh-0 hBCCgB"
  id="facebookPreview"
  mode={null}
>
  <div
    className="FacebookImage__PlaceholderImage-n8g3py-2 cXxLmL"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Select image
  </div>
  <div
    className="FacebookPreview__FacebookTextWrapper-sc-1nwbyjh-1 bjsFkV"
    mode={null}
  >
    <span
      className="screen-reader-text"
    >
      yoast.com
    </span>
    <p
      aria-hidden="true"
      className="FacebookSiteAndAuthorNames__FacebookSiteAndAuthorNamesWrapper-sc-1qo7jpl-0 gAHdzt"
    >
      <span
        className="FacebookSiteAndAuthorNames__FacebookSiteUrl-sc-1qo7jpl-2 hSwXjH"
      >
        yoast.com
      </span>
    </p>
    <span
      className="FacebookTitle-sc-1cm5c6b-0 cITNJw"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      YoastCon Workshops
    </span>
    <p
      className="FacebookDescription-ulm5bh-0 dKqgbc"
      mode={null}
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      Description to go along with a portrait image.
    </p>
  </div>
</div>
`;

exports[`FacebookPreview matches the snapshot for a square image 1`] = `
<div
  className="FacebookPreview__FacebookPreviewWrapper-sc-1nwbyjh-0 hBCCgB"
  id="facebookPreview"
  mode={null}
>
  <div
    className="FacebookImage__PlaceholderImage-n8g3py-2 cXxLmL"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Select image
  </div>
  <div
    className="FacebookPreview__FacebookTextWrapper-sc-1nwbyjh-1 bjsFkV"
    mode={null}
  >
    <span
      className="screen-reader-text"
    >
      yoast.com
    </span>
    <p
      aria-hidden="true"
      className="FacebookSiteAndAuthorNames__FacebookSiteAndAuthorNamesWrapper-sc-1qo7jpl-0 gAHdzt"
    >
      <span
        className="FacebookSiteAndAuthorNames__FacebookSiteUrl-sc-1qo7jpl-2 hSwXjH"
      >
        yoast.com
      </span>
    </p>
    <span
      className="FacebookTitle-sc-1cm5c6b-0 cITNJw"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      YoastCon Workshops
    </span>
    <p
      className="FacebookDescription-ulm5bh-0 dKqgbc"
      mode={null}
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      Description to go along with a square image.
    </p>
  </div>
</div>
`;

exports[`FacebookPreview matches the snapshot for a too small image 1`] = `
<div
  className="FacebookPreview__FacebookPreviewWrapper-sc-1nwbyjh-0 hBCCgB"
  id="facebookPreview"
  mode={null}
>
  <div
    className="FacebookImage__PlaceholderImage-n8g3py-2 cXxLmL"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Select image
  </div>
  <div
    className="FacebookPreview__FacebookTextWrapper-sc-1nwbyjh-1 bjsFkV"
    mode={null}
  >
    <span
      className="screen-reader-text"
    >
      yoast.com
    </span>
    <p
      aria-hidden="true"
      className="FacebookSiteAndAuthorNames__FacebookSiteAndAuthorNamesWrapper-sc-1qo7jpl-0 gAHdzt"
    >
      <span
        className="FacebookSiteAndAuthorNames__FacebookSiteUrl-sc-1qo7jpl-2 hSwXjH"
      >
        yoast.com
      </span>
    </p>
    <span
      className="FacebookTitle-sc-1cm5c6b-0 cITNJw"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      YoastCon Workshops
    </span>
    <p
      className="FacebookDescription-ulm5bh-0 dKqgbc"
      mode={null}
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      Description to go along with too small an image.
    </p>
  </div>
</div>
`;
